# 3D-Scanning-App

./: CLAUDE.md  bootstrap.sh
.claude/: settings.local.json
ScanForge3D/: .gitignore  CLAUDE.md  settings.gradle.kts
ScanForge3D/app/: build.gradle.kts
ScanForge3D/cloud-backend/: Dockerfile  docker-compose.yml  main.py  requirements.txt
ScanForge3D/cloud-backend/models/: __init__.py  job.py  scan_data.py
ScanForge3D/cloud-backend/routers/: __init__.py  export.py  processing.py  scan_upload.py
ScanForge3D/cloud-backend/services/: __init__.py  mesh_service.py  photogrammetry_service.py  reverse_engineering.py  step_export_service.py
ScanForge3D/cloud-backend/workers/: celery_app.py  processing_worker.py
ScanForge3D/native/: CMakeLists.txt
ScanForge3D/native/src/: jni_bridge.cpp  jni_bridge.h
ScanForge3D/native/src/export/: obj_writer.cpp  obj_writer.h  ply_writer.cpp  ply_writer.h  stl_writer.cpp  stl_writer.h
ScanForge3D/native/src/mesh/: marching_cubes.cpp  marching_cubes.h  mesh_decimation.cpp  mesh_decimation.h  mesh_repair.cpp  mesh_repair.h  mesh_smoothing.cpp  mesh_smoothing.h  poisson_reconstruction.cpp  poisson_reconstruction.h
ScanForge3D/native/src/point_cloud/: icp_registration.cpp  icp_registration.h  normal_estimation.cpp  normal_estimation.h  point_cloud.cpp  point_cloud.h  statistical_outlier_removal.cpp  statistical_outlier_removal.h  voxel_grid_filter.cpp  voxel_grid_filter.h
ScanForge3D/native/src/util/: kdtree.cpp  kdtree.h  math_utils.h  timer.h
ScanForge3D/scripts/: build_native.sh  deploy_cloud.sh  setup_ndk.sh
(+54 files in other folders)
